# Serebrennikov-incidents-mvp

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  database.py  dependencies.py  security.py
backend/app/modules/analytics/: router.py  service.py
backend/app/modules/audit/: models.py  router.py  schemas.py  service.py
backend/app/modules/catalogs/: models.py  router.py  schemas.py  service.py
backend/app/modules/incidents/: lifecycle.py  models.py  router.py  schemas.py  service.py
backend/app/modules/notifications/: service.py
backend/app/modules/users/: models.py  router.py  schemas.py  service.py
backend/app/shared/: demo_seed.py  seeds.py
frontend/: .dockerignore  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/features/audit/: AuditPage.tsx
frontend/src/features/auth/: LoginPage.tsx
frontend/src/features/catalogs/: CatalogsPage.tsx  DeleteCatalogModal.tsx
frontend/src/features/dashboard/: DashboardPage.tsx  dashboard-primitives.tsx  dashboard.css
frontend/src/features/incidents/: IncidentCardPage.tsx  IncidentEditModal.tsx  IncidentsPage.tsx
frontend/src/features/templates/: MyTemplatesPage.tsx
frontend/src/features/users/: UsersPage.tsx
frontend/src/shared/: AppLayout.tsx  IncidentFormModal.tsx  auth.tsx  statusUtils.ts
