[project]
name = "incident-backend"
version = "0.1.0"
description = "ИС учёта операционных инцидентов в отделах продаж — backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy==2.0.36",
    "psycopg[binary]==3.2.3",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.20",
    "email-validator==2.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
